[package]
name = "markdown-confluence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
assert_fs = "1.0.13"
clap = { version = "4.4.8", features = ["derive"] }
comrak = { version="0.19.0", features = ["shortcodes"]}
data-encoding = "2.5.0"
dotenvy = "0.15.7"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
ring = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.30"
tera = "1.19.1"
thiserror = "1.0.50"
walkdir = "2.4.0"
