[package]
name = "marked-space"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
assert_fs = "1.0.13"
clap = { version = "4.4.8", features = ["derive"] }
comrak = { version = "0.36.0", features = ["shortcodes"] }
data-encoding = "2.5.0"
dotenvy = "0.15.7"
emojis = "0.6.4"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
] }
ring = "0.17.7"
saphyr = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.20.0"
thiserror = "2.0"
walkdir = "2.4.0"
